--- a/Planty_The_PlantWatering_System/project.properties
+++ b/Planty_The_PlantWatering_System/project.properties
@@ -1,2 +1,5 @@
 name=Planty_The_PlantWatering_System
 #assetOtaDir=assets
+dependencies.Grove_Air_quality_Sensor=1.0.1
+dependencies.Adafruit_BME280=1.1.5
+dependencies.Adafruit_SSD1306=0.0.2
